--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
+    "@vercel/analytics": "^1.5.0",
     "dotenv": "^16.5.0",
     "itidc-web": "file:",
     "motion": "^12.5.0",
